--- a/index.css
+++ b/index.css
@@ -140,6 +140,10 @@ a{
   color:var( --bold-text);
 }
 
+button{
+  cursor: pointer;
+}
+
 .dark-theme{
   --primary-color: #0FA3B1;
   --secondary-color:#576490; 
