--- a/utility/scrollbehaviour.css
+++ b/utility/scrollbehaviour.css
@@ -1,4 +1,4 @@
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: 7px;
     color: black;
   }
@@ -21,4 +21,4 @@
   ::-webkit-scrollbar-thumb:horizontal{
     background: var( --secondary-text-color);
     border-radius: 2px;
-  }
+  } */
